# rss-webhook

./: Cargo.toml  body.xml  dev.nix
.idx/: dev.nix
src/: error.rs  lib.rs  main.rs  main2.rs  stream.rs
src/data/: filing.xml
